Renamed microservice and refactored accordingly
