# src/main/java/com/brilliantmule/identity/management/controller/HealthController.java
@@ -1,28 +1,26 @@
-package com.umbrella.idms.controller;
+package com.brilliantmule.identity.management.controller;
 
-import com.umbrella.idms.model.Health;
-import com.umbrella.idms.service.HealthService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.SpringApplication;
 import org.springframework.context.ApplicationContext;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
-@RequestMapping("/v1/idms")
+@RequestMapping("/v1")
 public class HealthController {
     @Autowired
-    HealthService healthService;
+    com.brilliantmule.identity.management.service.HealthService healthService;
     @Autowired
     private ApplicationContext context;
 
     @GetMapping("/health")
-    private Health getServiceHealth() {
+    private com.brilliantmule.identity.management.model.Health getServiceHealth() {
         return healthService.getServiceHealth();
     }
 
     @PutMapping("/health")
-    private void overrideServiceHealth(@RequestBody Health health) {
-        if (health.getStatus().equalsIgnoreCase(Health.STATUS_SHUTDOWN) || health.getStatus().equalsIgnoreCase(Health.STATUS_STOP)) {
+    private void overrideServiceHealth(@RequestBody com.brilliantmule.identity.management.model.Health health) {
+        if (health.getStatus().equalsIgnoreCase(com.brilliantmule.identity.management.model.Health.STATUS_SHUTDOWN) || health.getStatus().equalsIgnoreCase(com.brilliantmule.identity.management.model.Health.STATUS_STOP)) {
             initiateAppShutdown(0);
         } else {
             healthService.overrideServiceHealth(health);
