# src/main/java/com/brilliantmule/identity/management/exception/IdentityNotFoundException.java
@@ -1,4 +1,4 @@
-package com.umbrella.idms.exception;
+package com.brilliantmule.identity.management.exception;
 
 /**
  * @author Alain Belisle
