# src/main/java/com/brilliantmule/identity/management/service/HealthService.java
@@ -1,0 +1,9 @@
+package com.brilliantmule.identity.management.service;
+
+public interface HealthService {
+    com.brilliantmule.identity.management.model.Health getServiceHealth();
+
+    boolean isServiceHealthy();
+
+    void overrideServiceHealth(com.brilliantmule.identity.management.model.Health health);
+}
